<resources>
    <string name="app_name">Animes</string>
    <string name="director">Director:</string>
    <string name="producer">Producer:</string>
    <string name="release_date">Release Date:</string>
    <string name="rate_score">Rate Score:</string>
    <string name="description">Description:</string>
    <string name="original_title_romanised">Original Title Romanised:</string>
    <string name="original_title">Original Title:</string>
</resources>
