<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.animes.ui.AnimeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="186dp"
                android:layout_height="236dp"
                android:layout_marginTop="18dp"
                app:imageUrl="@{viewModel.anime.image}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ghibli" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="268dp"
                android:padding="8dp"
                android:text="@{viewModel.anime.title}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Castle in the Sky" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:background="?attr/dividerHorizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/original_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:padding="8dp"
                android:text="@{viewModel.anime.original_title}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="天空の城ラピュタ" />

            <TextView
                android:id="@+id/original_title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:text="@string/original_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/original_title_romanised"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:padding="8dp"
                android:text="@{viewModel.anime.original_title_romanised}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="Tenkū no shiro Rapyuta" />

            <TextView
                android:id="@+id/original_title_romanised2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:paddingStart="8dp"
                android:text="@string/original_title_romanised"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:padding="8dp"
                android:text="@{viewModel.anime.director}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="Hayao Miyazaki" />

            <TextView
                android:id="@+id/director2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:paddingStart="8dp"
                android:text="@string/director"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/producer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="196dp"
                android:padding="8dp"
                android:text="@{viewModel.anime.producer}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="Isao Takahata" />

            <TextView
                android:id="@+id/producer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="176dp"
                android:paddingStart="8dp"
                android:text="@string/producer"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="252dp"
                android:padding="8dp"
                android:text="@{viewModel.anime.release_date}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="1986" />

            <TextView
                android:id="@+id/release_date2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="232dp"
                android:paddingStart="8dp"
                android:text="@string/release_date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/rt_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="308dp"
                android:padding="8dp"
                android:text="@{viewModel.anime.rt_score}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="95" />

            <TextView
                android:id="@+id/rt_score2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="288dp"
                android:paddingStart="8dp"
                android:text="@string/rate_score"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="364dp"
                android:padding="8dp"
                android:text="@{viewModel.anime.description}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="The orphan Sheeta inherited a mysterious crystal that links her to the mythical sky-kingdom of Laputa. With the help of resourceful Pazu and a rollicking band of sky pirates, she makes her way to the ruins of the once-great civilization. Sheeta and Pazu must outwit the evil Muska, who plans to use Laputa's science to make himself ruler of the world." />

            <TextView
                android:id="@+id/description2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="344dp"
                android:paddingStart="8dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
